--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   get: 4.6.6
   cupertino_icons: 1.0.8
+  google_fonts: 6.2.1
 
 dev_dependencies:
   flutter_test:
