--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dev_dependencies:
     sdk: flutter
   mocktail: 1.0.4
   flutter_lints: 5.0.0
+  integration_test:
+    sdk: flutter
 
 flutter:
   uses-material-design: true
